# research-copilot

./: .env  .env.example  .gitignore  BACKEND_GUIDE.md  DATABASE_SETUP.md  Dockerfile  README.md  main.py  mcp_servers.example.json  mcp_servers.json  memory.db  memory.db-shm  memory.db-wal  output.txt  pyproject.toml  run_server.py  test_ak.py  test_ak2.py  test_ak3.py  test_ak4.py  test_ak5.py  test_hk_fin.py  test_mcp.py
.github/workflows/: ci.yml
app/: main.py
app/api/: auth.py  chat.py
app/db/: models.py  repository.py
app/graph/: build_graph.py  prompts.py  state.py
app/graph/nodes/: controller.py  planner.py  reviewer.py  simple_chat.py  worker.py
app/infrastructure/: client.py  local_server.py  setup.py  tavily_server.py
app/infrastructure/llm/: llm.py
app/infrastructure/mcp/: client.py  setup.py
app/llm/: client.py  prompts.py  wrapper.py
app/memory/: __init__.py
app/prompts/templates/: simple_chat.jinja
app/services/: chat_persistence.py
app/shared/: errors.py
static/: Dockerfile  package-lock.json  package.json
static/components/chat/: AIMessage.tsx  ChatContainer.tsx  ChatInput.tsx  ChatSidebar.tsx  SettingsDialog.tsx  StreamingText.tsx  ThinkingPanel.tsx  TopBar.tsx  UserMessage.tsx
static/hooks/: useAuth.ts  useChatStream.ts
static/lib/: api.ts  types.ts
tests/: conftest.py  teatall.py  test_controller.py  test_llm.py  test_mcp.py  test_planner.py
