[project]
name = "agent04"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "langgraph>=1.0.10",
    "mcp>=1.26.0",
    "openai>=2.24.0",
    "python-dotenv>=1.2.2",
]
