[project]
name = "agent04"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.18.34",
    "anthropic>=0.84.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "langgraph>=1.0.10",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "markdown>=3.10.2",
    "matplotlib>=3.10.8",
    "mcp[cli]>=1.26.0",
    "openai>=2.24.0",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "tushare>=1.4.3",
    "uvicorn>=0.41.0",
]
